--- a/app/views/users/settings_account.html.erb
+++ b/app/views/users/settings_account.html.erb
@@ -16,19 +16,20 @@
       <%= f.input :old_password %>
       <%= f.button :submit, 'Update password', class: 'btn btn-success' %>
     </div>
-    <div class="col-md-4 offset-md-4">
-
-    </div>
   </div>
 <% end %>
 
 <div class="row mt-3">
-  <div class="col-md-4">
+  <div class="col-md-5">
     <h4>Delete account</h4>
     <p class="text-danger">
-      Deleting your account will lose all your user data. If you are sure, click the button below.
+      Deleting your account will lose all your user data.
+      If anyway, you are sure, type 'Yes I agree' and click the button below.
     </p>
-    <button class="btn btn-danger">Delete your account</button>
+    <form class="form-inline">
+      <input type="text" class="text-danger ">
+      <button class="btn btn-danger">Delete your account</button>
+    </form>
   </div>
 </div>
 
