--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,8 +9,8 @@
 					<img src="factbox.png" width="175px" class="img-fluid" alt="Factbox"/>
 				</div>
 				<div class="col-sm-7">
-	        <h1>Bem vindo ao Factbox</h1>
-	          <p><small>Simples, adaptavél e aberto</small></p>
+	        <h1>Welcome to Factbox</h1>
+	          <p><small>Simple, adaptable and open</small></p>
 	      </div>
 				<%= render "sessions/new" %>
 	    </div>
@@ -24,30 +24,31 @@
 					<h2>Sign in</h2>
 					<%= render "users/new" %>
 				</div>
-				<div class="col-sm-3">
-					<div class="thumbnail">
+				<div class="col-sm-5">
+					<div class="thumbnail mb-3 mt-3">
 						<h1 class="motive">
-							<i class="glyphicon glyphicon-cog"></i> Highly configurable
+							<i class="fa fa-cog mr-3"></i> You could create plugins
 						</h1>
 						<div class="caption">
-							User provides how many settings you need
+							Factbox supports plugins to make your working context more
+							compatible with your Requirements Engineering modeling.
+						</div>
+					</div>
+					<div class="thumbnail mb-3">
+						<h1 class="motive">
+							<i class="fa fa-code-branch mr-3"></i> Versioning and traceability
+						</h1>
+						<div class="caption">
+							Your artifacts will always be traced
 						</div>
 					</div>
 					<div class="thumbnail">
 						<h1 class="motive">
-							<i class="glyphicon glyphicon-edit"></i> Easy to contribute
+							<i class="fa fa-book mr-3"></i>
+							Do everything collaboratively
 						</h1>
 						<div class="caption">
-							We build it, to facility your contribute
-						</div>
-					</div>
-					<div class="thumbnail">
-						<h1 class="motive">
-							<i class=" glyphicon glyphicon-book"></i>
-							Helpful to manage requirements
-						</h1>
-						<div class="caption">
-							Now you will have control!
+							You can create projects and invite your stakeholders to keep them 100% informed
 						</div>
 					</div>
 				</div>
