--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -2,11 +2,12 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :name %>
-    <%= f.input :description, as: :text %>
+    <%= f.input :name, placeholder: 'Short and memorable names are more attractive' %>
+    <%= f.input :description, as: :text, placeholder: 'Tell us a little about what the project is about.' %>
   </div>
 
   <div class="form-actions">
+    <%= link_to 'Back', projects_path, class: 'btn btn-default pull-left'  %>
     <%= f.button :submit, class: 'btn btn-success pull-right' %>
   </div>
 <% end %>
