--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,10 +1,7 @@
 <div class="row">
   <div class="col-md-3">
     <div class="text-center">
-      <img src="/factbox.png"
-        class="rounded img-fluid"
-        alt="Logo"
-      >
+      <%= render 'logo' %>
     </div>
     <h1><%= @project.name %></h1>
     <div class="description info">
