--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -9,7 +9,9 @@
     </div>
     <div class="dropdown-divider"></div>
     <div class="actions text-center">
-      <a href="/projects/<%= @project.id %>/artifacts/new"  type="button" class="btn btn-light">Create Artifact</a>
+      <a href="/projects/<%= @project.id %>/artifacts/new" type="button" class="btn btn-primary">
+        Create Artifact<i class="fa fa-plus-square ml-3"></i>
+      </a>
     </div>
   </div>
 
