Change traceability route to be found by name of project

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -46,7 +46,7 @@
 
       <li class="nav-item">
         <a
-          href="/traceability/<%=@project.id%>"
+          href="/traceability/<%=@project.uri_name%>"
           class="nav-link"
         >
           <i class="fa fa-circle"></i> Traceability
