--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -9,7 +9,7 @@
     </div>
     <div class="dropdown-divider"></div>
     <div class="actions text-center">
-      <a href="/projects/<%= @project.id %>/artifacts/new" type="button" class="btn btn-primary">
+      <a href="/projects/<%= @project.uri_name %>/artifacts/new" type="button" class="btn btn-primary">
         Create Artifact<i class="fa fa-plus-square ml-3"></i>
       </a>
     </div>
