Update index.css to scss and change image ref

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -14,7 +14,7 @@ section {
 	font-size: 25px;
 	background-color: 'black';
 	background-attachment: scroll;
-	background-image: url('stardust.png');
+	background-image: url(asset_path('stardust.png'));
 	border-bottom: solid 1px #000;
 }
 
