--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -9,7 +9,7 @@
   </div>
 
   <div class="form-actions">
-    <%= link_to 'Back', projects_path, class: 'btn btn-default pull-left'  %>
+    <%= link_to 'Back', :back, class: 'btn btn-default pull-left'  %>
     <%= f.button :submit, class: 'btn btn-success pull-right' %>
   </div>
 <% end %>
