--- a/app/views/artifacts/new.html.erb
+++ b/app/views/artifacts/new.html.erb
@@ -14,6 +14,6 @@
         </li>
       <% end %>
     </ul>
-    <%= link_to 'Back', "/projects/#{params[:name]}", class: 'btn btn-light pull-left'  %>
+    <%= link_to 'Back', :back, class: 'btn btn-light pull-left'  %>
   </div>
 </div>
