--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -12,7 +12,7 @@
     <%= f.input :file, class: "mt-3" %>
 
     <div class="row mt-3">
-      <%= link_to 'Back', project_path(@artifact.project), class: "btn btn-light mr-1" %>
+      <%= link_to 'Back', :back, class: "btn btn-light mr-1" %>
       <%= f.button :submit, class: 'btn btn-success pull-right' %>
     </div>
   </div>
