--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -6,6 +6,6 @@
 </div>
 
 <div class="row mt-3">
-  <%= link_to 'Back', project_path(@artifact.project), class: "btn btn-light mr-1" %>
+  <%= link_to 'Back', :back, class: "btn btn-light mr-1" %>
   <%= link_to 'Edit', @artifact.edit_link, class: "btn btn-primary" %>
 </div>
