Change back buttons and project forms

--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -6,6 +6,6 @@
 </div>
 <div class="col-md-6">
   <div class="page-content">
-    <%= render 'form', note: @project %>
+    <%= render 'form', note: @project, backbutton: true %>
   </div>
 </div>
