--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -9,35 +9,23 @@
 
 <div class="row mt-3">
   <div class="col-md-6">
-    <h4>Basic informations</h4>
-    <%= render 'form', note: @project %>
+    <div>
+      <h4>Basic informations</h4>
+      <%= render 'form', backbutton: false %>
+    </div>
+
+    <div class="mt-5">
+      <h4 class="mb-3">Invite members</h4>
+      <%= render 'invite_form' %>
+    </div>
   </div>
+
   <div class="col-md-3 offset-md-2">
+    <h4>Project picture</h4>
     <%= simple_form_for(@project) do |f| %>
       <%= render 'logo' %>
-      <%= f.input :logo, label: 'Project picture', class: "mt-3" %>
+      <%= f.input :logo, class: "mt-3" %>
       <%= f.button :submit, value: 'Update picture', class: 'btn btn-success'%>
-    <% end %>
-  </div>
-</div>
-
-<div class="row mt-3">
-  <div class="col-md-6">
-    <h4 class="mb-3">Invite members</h4>
-    <%= form_for @project,
-                 url: projects_invite_path,
-                 method: :post,
-                 class: 'form-inline' do |f| %>
-      <div class="input-group mb-2 mr-sm-2">
-        <div class="input-group-prepend">
-          <div class="input-group-text">@</div>
-        </div>
-        <%= hidden_field(:project, :id, value: @project.id)%>
-        <%= text_field(:user, :login, placeholder: "Type user login", class: "form-control") %>
-        <button type="submit" class="btn btn-success">
-          Add <i class="ml-2 fa fa-user-plus"></i>
-        </button>
-      </div>
     <% end %>
   </div>
 </div>
