Fix wrong project route

--- a/app/views/projects/_project_list.html.erb
+++ b/app/views/projects/_project_list.html.erb
@@ -3,7 +3,7 @@
     <% projects.each do |project| %>
       <li class="list-unstyled">
         <i class="fa fa-book mr-1"></i>
-        <a href="projects/<%= project.uri_name %>">
+        <a href="/projects/<%= project.uri_name %>">
           <%= project.name %>
         </a>
       </li>
