--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,9 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-light" role="navigation">
     <div class="container">
-      <a class="navbar-brand" href="/">Factbox</a>
+      <a class="navbar-brand" href="/">
+        Factbox <small class="text-success">Beta</small>
+      </a>
 
       <ul class="nav navbar-right top-nav">
         <li class="nav-item dropdown">
