Refactor edit action and other routes for artifacts actions

--- a/app/views/projects/_artifact-list.html.erb
+++ b/app/views/projects/_artifact-list.html.erb
@@ -14,7 +14,7 @@
             </a>
           </td>
           <td>
-            <a href="<%= artifact.edit_link %>">
+            <a href="<%= artifact.edit_link(@project.uri_name) %>">
               <i class="fa fa-edit"></i>
             </a>
           </td>
