--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -1,19 +1,33 @@
-<%= simple_form_for(@artifact, as: 'artifact') do |f| %>
-  <%= f.error_notification %>
+<div class="col-md-8">
+  <%= simple_form_for(@artifact, as: 'artifact') do |f| %>
+    <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :project_id, as: :hidden, input_html: { value: @artifact.project_id } %>
-    <%= f.input :type, as: :hidden, input_html: { value: 'Image' } %>
-    <%= f.input :title %>
+    <div class="form-inputs">
+      <%= f.input :project_id, as: :hidden, input_html: { value: @artifact.project_id } %>
+      <%= f.input :type, as: :hidden, input_html: { value: 'Image' } %>
+      <div class="w-50">
+        <%= f.input :title %>
+      </div>
 
-    <!-- only when edit -->
-    <%= if @artifact.file.attached? then image_tag url_for(@artifact.file), class: "img-fluid" end %>
+      <!-- only when edit -->
+      <div class="">
+        <%= if @artifact.file.attached?
+              image_tag url_for(@artifact.file), class: "img-fluid img-thumbnail mw-50"
+            end
+        %>
+      </div>
 
-    <%= f.input :file, class: "mt-3" %>
+      <%= f.input :file, class: "mt-3" %>
 
-    <div class="row mt-3">
-      <%= link_to 'Back', :back, class: "btn btn-light mr-1" %>
-      <%= f.button :submit, class: 'btn btn-success pull-right' %>
+      <div class="w-50">
+        <%= f.input :source_id, selected: @artifact.source_id,
+            collection: @available_artifacts, prompt: "Select source artifact" %>
+      </div>
+
+      <div class="row mt-3">
+        <%= link_to 'Back', :back, class: "btn btn-light mr-1" %>
+        <%= f.button :submit, class: 'btn btn-success pull-right' %>
+      </div>
     </div>
-  </div>
-<% end %>
+  <% end %>
+</div>
