--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -1,15 +1,21 @@
-<%= simple_form_for @artifact, as: 'artifact' do |f| %>
-  <%= f.error_notification %>
+<div class="col-md-8">
+  <%= simple_form_for @artifact, as: 'artifact' do |f| %>
+    <%= f.error_notification %>
 
-  <%= f.input :project_id, as: :hidden, input_html: { value: @artifact.project_id } %>
-  <%= f.input :type, as: :hidden, input_html: { value: 'Note' } %>
-  <%= f.input :title %>
-  <%= f.input :content, as: :text %>
-  <%= f.input :source_id, selected: @artifact.source_id,
-      collection: @available_artifacts, prompt: "Select source artifact" %>
+    <%= f.input :project_id, as: :hidden, input_html: { value: @artifact.project_id } %>
+    <%= f.input :type, as: :hidden, input_html: { value: 'Note' } %>
+    <div class="w-50">
+      <%= f.input :title %>
+    </div>
+    <%= f.input :content, as: :text %>
+    <div class="w-50">
+      <%= f.input :source_id, selected: @artifact.source_id,
+          collection: @available_artifacts, prompt: "Select source artifact" %>
+    </div>
 
-  <div class="row mt-3">
-    <%= link_to 'Back', :back, class: "btn btn-light mr-1" %>
-    <%= f.button :submit, class: 'btn btn-success pull-right' %>
-  </div>
-<% end %>
+    <div class="row mt-3">
+      <%= link_to 'Back', :back, class: "btn btn-light mr-1" %>
+      <%= f.button :submit, class: 'btn btn-success pull-right' %>
+    </div>
+  <% end %>
+</div>
