--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -2,7 +2,9 @@
   <h1><%= @artifact.title %></h1>
 </div>
 <div class="row">
-  <%= image_tag url_for(@artifact.specific.file), class: "img-fluid" %>
+  <div class="col-md-8">
+    <%= image_tag url_for(@artifact.specific.file), class: "img-fluid img-thumbnail mw-50" %>
+  </div>
 </div>
 
 <div class="row mt-3">
