--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,24 +18,9 @@
               <a class="dropdown-item" href="/logout">Logout</a>
             </div>
           <% else %>
-            <ul class="nav pull-right">
-              <li class="dropdown" id="menuLogin">
-                <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown">
-                  Sign up
-                </a>
-                <div class="dropdown-menu">
-                  <li>
-                    <form action="/user/authenticate" class="form-group login-form" method="POST">
-                      <input name="login" type="text" class="form-control" placeholder="Login or email"/>
-                      <input name="password" type="password" class="form-control" placeholder="Password">
-                      <button type="submit" class="btn btn-primary btn-group-justified">
-                        Sign Up
-                      </button>
-                    </form>
-                  </li>
-                </div>
-              </li>
-            </ul>
+            <a href="/" class="nav-link dropdown-toggle">
+              Sign up
+            </a>
           <% end %>
         </li>
       </ul>
