--- a/app/views/stories/_form.html.erb
+++ b/app/views/stories/_form.html.erb
@@ -4,7 +4,7 @@
   <div class="form-inputs">
     <%= f.input :project_id, as: :hidden, input_html: { value: @artifact.project_id } %>
     <!-- Common attributes -->
-    <%= f.input :type, as: :hidden, input_html: { value: 'stories' } %>
+    <%= f.input :type, as: :hidden, input_html: { value: 'Story' } %>
     <%= f.input :title %>
     <!-- Specific attributes -->
     <%= f.input :story, as: :text %>
@@ -14,7 +14,7 @@
   </div>
 
   <div class="row align-items-end">
-    <%= link_to 'Back', project_path(@artifact.project), class: "btn btn-light mr-1" %>
+    <%= link_to 'Back', :back, class: "btn btn-light mr-1" %>
     <%= f.button :submit, class: 'btn btn-success pull-right' %>
   </div>
 <% end %>
