Testing ways to use markdown

--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -2,6 +2,8 @@
   <h1><%= @artifact.title %></h1>
 </div>
 
-<div class="row">
-  <%= @artifact.specific.content %>
-</div>
+<%=
+  opts = { auto_ids: "false" }
+  markdown = Kramdown::Document.new(@artifact.specific.content, opts).to_html
+  render html: markdown.html_safe
+%>
