--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-8">
+<div class="col-md-12">
   <%= simple_form_for @artifact, as: 'artifact' do |f| %>
     <%= f.error_notification %>
 
@@ -7,7 +7,10 @@
     <div class="w-50">
       <%= f.input :title %>
     </div>
-    <%= f.input :content, as: :text %>
+
+
+    <%= react_component("MarkdownForm", { content: @artifact.content }) %>
+
     <div class="w-50">
       <%= f.input :source_id, selected: @artifact.source_id,
           collection: @available_artifacts, prompt: "Select source artifact" %>
