Remove kandown and create js component to render markdown

--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -2,8 +2,4 @@
   <h1><%= @artifact.title %></h1>
 </div>
 
-<%=
-  opts = { auto_ids: "false" }
-  markdown = Kramdown::Document.new(@artifact.specific.content, opts).to_html
-  render html: markdown.html_safe
-%>
+<%= react_component("Markdown", { content: @artifact.specific.content }) %>
