--- a/app/views/projects/_artifact-list.html.erb
+++ b/app/views/projects/_artifact-list.html.erb
@@ -18,11 +18,13 @@
               <i class="fa fa-edit"></i>
             </a>
           </td>
-          <td>
-            <%= link_to artifact, method: :delete do %>
-              <i class="fa fa-trash-alt"></i>
-            <% end %>
-          </td>
+          <% if @project.users.exists?(current_user.id) %>
+            <td>
+              <%= link_to artifact, method: :delete do %>
+                <i class="fa fa-trash-alt"></i>
+              <% end %>
+            </td>
+          <% end %>
         </tr>
       <% end %>
     </tbody>
