--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -9,9 +9,11 @@
     </div>
     <div class="dropdown-divider"></div>
     <div class="actions text-center">
-      <a href="/projects/<%= @project.uri_name %>/artifacts/new" type="button" class="btn btn-primary">
-        Create Artifact<i class="fa fa-plus-square ml-3"></i>
-      </a>
+      <% if @project.users.exists?(current_user.id) %>
+        <a href="/projects/<%= @project.uri_name %>/artifacts/new" type="button" class="btn btn-primary">
+          Create Artifact<i class="fa fa-plus-square ml-3"></i>
+        </a>
+      <% end %>
     </div>
   </div>
 
