Update source input from image and note forms

--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -20,8 +20,12 @@
       <%= f.input :file, class: "mt-3" %>
 
       <div class="w-50">
-        <%= f.input :source_id, selected: @artifact.source_id,
-            collection: @available_artifacts, prompt: "Select source artifact" %>
+        <%= f.input :source_id,
+            selected: @artifact.source_id,
+            collection: @available_artifacts,
+            prompt: "Select one artifact that is the input of this",
+            label: "Source of information"
+        %>
       </div>
 
       <div class="row mt-3">
