--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -12,8 +12,12 @@
     <%= react_component("MarkdownForm", { content: @artifact.content }) %>
 
     <div class="w-50">
-      <%= f.input :source_id, selected: @artifact.source_id,
-          collection: @available_artifacts, prompt: "Select source artifact" %>
+      <%= f.input :source_id,
+          selected: @artifact.source_id,
+          collection: @available_artifacts,
+          prompt: "Select one artifact that is the input of this",
+          label: "Source of information"
+      %>
     </div>
 
     <div class="row mt-3">
