--- a/app/views/projects/traceability.html.erb
+++ b/app/views/projects/traceability.html.erb
@@ -1,2 +1,13 @@
-<!-- erb: paste this in view -->
-<%= react_component("TraceabilityGraph", { nodes: @nodes.to_json, edges: @edges.to_json }) %>
+<%= render 'basic_info' %>
+
+<div class="row">
+  <div class="col-md-12">
+    <%= render 'home_tabs' %>
+
+    <div class="tab-content mt-2" id="myTabContent">
+      <div class="tab-pane fade show active" id="artifact" role="tabpanel" aria-labelledby="artifact-tab">
+        <%= react_component("TraceabilityGraph", { nodes: @nodes.to_json, edges: @edges.to_json }) %>
+      </div>
+  	</div>
+  </div>
+</div>
