--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -3,16 +3,8 @@
 <div class="row">
   <div class="col-md-12">
     <%= render 'home_tabs' %>
-    <!-- <% @plugins.each do |plugin| %>
-      <li class="nav-item">
-        <a
-          href="/<%=@project.name%>/<%=plugin[:resource]%>"
-          class="nav-link"
-        >
-          <i class="fa fa-puzzle-piece"></i> <%= plugin[:name] %>
-        </a>
-      </li>
-    <% end %> -->
+
+    <%= render 'plugins' %>
 
     <div class="tab-content mt-2" id="myTabContent">
       <div class="tab-pane fade show active" id="artifact" role="tabpanel" aria-labelledby="artifact-tab">
