--- a/app/views/projects/_plugins.html.erb
+++ b/app/views/projects/_plugins.html.erb
@@ -1,17 +1,19 @@
-<div class="p-2 mt-1">
-  <p>
-    <i class="fa fa-puzzle-piece"></i> Available Plugins
-  </p>
+<% unless @plugins.empty? %>
+  <div class="p-2 mt-1">
+    <p>
+      <i class="fa fa-puzzle-piece"></i> Available Plugins
+    </p>
 
-  <% @plugins.each do |plugin| %>
-    <span class="badge badge-light">
-      <a
-        href="/<%=@project.name%>/<%=plugin[:resource]%>"
-        class="nav-link"
-      >
-        <%= plugin[:name] %>
-      </a>
-    </span>
-  <% end %>
+    <% @plugins.each do |plugin| %>
+      <span class="badge badge-light">
+        <a
+          href="/<%=@project.name%>/<%=plugin[:resource]%>"
+          class="nav-link"
+        >
+          <%= plugin[:name] %>
+        </a>
+      </span>
+    <% end %>
 
-</div>
+  </div>
+<% end %>
