Update artifact messages when project are empty

--- a/app/views/projects/_artifact-list.html.erb
+++ b/app/views/projects/_artifact-list.html.erb
@@ -30,8 +30,8 @@
     </tbody>
   </table>
 <% else %>
-  <h4 class="text-center info">
+  <h4 class="text-center info mt-5">
     <span class="glyphicon glyphicon-info-sign"></span>
-    Não existem requisitos nesse projeto ainda...
+    There are no artifacts in this project yet...
   </h4>
 <% end %>
