Change label of user form

--- a/app/views/users/_new.html.erb
+++ b/app/views/users/_new.html.erb
@@ -13,9 +13,9 @@
   <%= f.email_field :email, class: "form-control",
     placeholder:"User email", required: true %>
   <%= f.text_field :name, class: "form-control",
-    placeholder: "User name", required: true %>
+    placeholder: "First name", required: true %>
   <%= f.text_field :lastName, class: "form-control",
-    placeholder: "User lastname", required: true %>
+    placeholder: "Last name", required: true %>
   <%= f.text_field :login, class: "form-control",
     placeholder: "User login", required: true %>
   <%= f.password_field :password, class: "form-control",
