Add new artifact page to same layout of index project

--- a/app/assets/stylesheets/artifacts.scss
+++ b/app/assets/stylesheets/artifacts.scss
@@ -2,11 +2,5 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .artifact-types {
-  padding: 20px;
-  list-style: square;
-  background-color: #D9D9D9;
-}
-
-.artifact-types li {
-  margin-left: 20px;
+  list-style: none;
 }
