--- a/app/views/artifacts/new.html.erb
+++ b/app/views/artifacts/new.html.erb
@@ -1,20 +1,23 @@
+<%= render 'projects/basic_info' %>
+
 <div class="d-flex flex-column">
   <div class="row">
     <div class="col-md-12">
-      <div class="page-head">
-        <h1>Choose the type of artifact</h1>
-        <small>These are the currently supported artifacts</small>
+      <%= render 'projects/home_tabs' %>
+
+      <div class="mt-3 pl-3">
+        <h5 class="text-secondary">Choose the artifact that you want create</h5>
       </div>
     </div>
   </div>
 
   <div class="row">
-    <div class="col-md-8 p-4">
+    <div class="col-md-8">
       <div class="page-content">
         <ul class="artifact-types">
           <% @artifacts.each do |artifact| %>
             <li>
-              <a href="/projects/<%= params[:name] %>/artifacts/new/<%= artifact.name %>">
+              <a href="/projects/<%= @project.name %>/artifacts/new/<%= artifact.name %>">
                 <%= artifact.name %>
               </a>
             </li>
@@ -22,9 +25,5 @@
         </ul>
       </div>
     </div>
-  </div>
-
-  <div class="row ml-1">
-    <%= link_to 'Back to project', :back, class: 'btn btn-light pull-left'  %>
   </div>
 </div>
