--- a/app/views/projects/_basic_info.html.erb
+++ b/app/views/projects/_basic_info.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row d-flex justify-content-center">
     <div class="col-md-2">
-      <%= render 'logo' %>
+      <%= render 'projects/logo' %>
     </div>
   </div>
 
