--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,8 +1,12 @@
+<%= render 'layouts/breadcrumb',
+    project_name: @project.name,
+    current_page: 'Project settings' %>
+
 <div class="row">
   <div class="col-md-12">
     <div class="page-head">
       <h1>Edit project</h1>
-      <small>Settings of project</small>
+      <small>Settings, preferences and sensitive actions</small>
     </div>
   </div>
 </div>
