--- a/app/views/images/edit.html.erb
+++ b/app/views/images/edit.html.erb
@@ -1,3 +1,7 @@
+<%= render 'layouts/breadcrumb',
+    project_name: @artifact.project.name,
+    current_page: 'Edit image' %>
+
 <h1>Editing Note</h1>
 
 <%= render "#{@type.pluralize}/form", image: @image %>
