--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -1,3 +1,7 @@
+<%= render 'layouts/breadcrumb',
+    project_name: @artifact.project.name,
+    current_page: 'Image' %>
+
 <div class="row mb-3">
   <h1><%= @artifact.title %></h1>
 </div>
