--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -2,8 +2,16 @@
     project_name: @artifact.project.name,
     current_page: 'Note' %>
 
-<div class="row mb-3">
+
+<div class="row">
   <h1><%= @artifact.title %></h1>
+</div>
+
+<div class="row">
+  <p class="card-text text-muted">
+    <a href="/user/<%= @artifact.author.login %>"><%= @artifact.author.login %></a>
+    updated <%= time_ago_in_words @artifact.time_creation %>
+  </p>
 </div>
 
 <%= react_component("Markdown", { content: @artifact.specific.content }) %>
