Add thumbnail to image

--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -15,6 +15,6 @@
 
 <div class="row">
   <div class="col-md-12">
-    <%= image_tag url_for(@artifact.specific.file), class: "img-fluid" %>
+    <%= image_tag url_for(@artifact.specific.file), class: "img-fluid img-thumbnail" %>
   </div>
 </div>
